--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -548,19 +548,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sns_plot' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m sns\u001b[38;5;241m.\u001b[39mhistplot(df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mApplicantIncome\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#Right Skewed\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43msns_plot\u001b[49m\u001b[38;5;241m.\u001b[39mfigure\u001b[38;5;241m.\u001b[39msavefig(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutput.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'sns_plot' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "<AxesSubplot:xlabel='ApplicantIncome', ylabel='Count'>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -577,8 +576,7 @@
    ],
    "source": [
     "sns.histplot(df[\"ApplicantIncome\"])\n",
-    "#Right Skewed\n",
-    "sns_plot.figure.savefig(\"output.png\")\n"
+    "#Right Skewed\n"
    ]
   },
   {
